--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "7.2.10",
-    "@angular/compiler": "7.2.10",
-    "@angular/core": "7.2.10",
-    "@angular/forms": "7.2.10",
-    "@angular/platform-browser": "7.2.10",
-    "@angular/platform-browser-dynamic": "7.2.10",
-    "@angular/router": "7.2.10",
-    "chart.js": "2.8.0",
+    "@angular/common": "^7.2.10",
+    "@angular/compiler": "^7.2.10",
+    "@angular/core": "^7.2.10",
+    "@angular/forms": "^7.2.10",
+    "@angular/platform-browser": "^7.2.10",
+    "@angular/platform-browser-dynamic": "^7.2.10",
+    "@angular/router": "^7.2.10",
+    "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
-    "core-js": "2.6.5",
-    "ng2-charts": "2.0.3",
-    "rxjs": "6.4.0",
-    "zone.js": "0.8.29"
+    "core-js": "^3.0.0",
+    "ng2-charts": "^2.0.3",
+    "rxjs": "^6.4.0",
+    "zone.js": "^0.9.0"
   },
   "scripts": {
     "ng": "ng",
